fix(button): increase contrast for light positive action
Only secondary/plain, as primary uses white text color.

--- a/components/button/server.css
+++ b/components/button/server.css
@@ -75,6 +75,7 @@
       color: light-dark(var(--color-green-50), var(--color-green-80));
 
       &:hover {
+        color: light-dark(var(--color-green-20), var(--color-green-80));
         background-color: light-dark(
           var(--color-green-90),
           var(--color-green-10)
@@ -102,6 +103,7 @@
       color: light-dark(var(--color-green-50), var(--color-green-80));
 
       &:hover {
+        color: light-dark(var(--color-green-20), var(--color-green-80));
         background-color: light-dark(
           var(--color-green-90),
           var(--color-green-10)
